--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Welcome To G&T Home Services</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -14,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Welcome To G&T Home Services</h1>
-				<p> <em>Acomplete Home Services</p>
+        		<h1>Acomplete Home Services</h1>
+				<p>A step to bring Changes</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
