--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Acomplete Home Services</h1>
-				<p>A step to bring Changes</p>
+        		<h1>Welcome To G&T Home Services</h1>
+				<p>Acomplete Home Services</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
