--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1 style="text-align:center;"> Welcome To G&T Home Services</h1>
-				<p style="text-align:center;">Acomplete Home Services</p>
+        		<h1 style="text-align:center;" style="background-color:tomato;"> Welcome To G&T Home Services</h1>
+				<p style="text-align:center;" "background-color:powderblue;">Acomplete Home Services</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
