--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1 style="text-align:center;","background-color:tomato;"> Welcome To G&T Home Services</h1>
-				<p style="text-align:center;", "background-color:powderblue;">Acomplete Home Services</p>
+				<h2 style="text-align:center;", "background-color:powderblue;">Acomplete Home Services</h2>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
