--- a/register/atom.html
+++ b/register/atom.html
@@ -5,10 +5,10 @@ layout: feed
 <feed xmlns="http://www.w3.org/2005/Atom">
 
 	<title>Register For Services</title>
-	<link href="https://gnthomeservices.github.io/Register/atom.xml" rel="self"/>
-	<link href="https://gnthomeservices.github.io/Register"/>
+	<link href="https://gnthomeservices.github.io/register/atom.xml" rel="self"/>
+	<link href="https://gnthomeservices.github.io/register"/>
 	<updated>{{ site.time | date_to_xmlschema }}</updated>
-	<id>https://gnthomeservices.github.io/Register</id>
+	<id>https://gnthomeservices.github.io/register</id>
 	<author>
 		<name>G&T Home Services</name>
 		<email>gnthomeservices@gmail.com</email>
