--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 		
 		<div class="container">
     		<div class="blurb">
-        		<h1>Who Am I</h1>
+        		<h1>WHO WE ARE</h1>
 				<p>Computer Science Enthusiasts</p>
 				
 			<marquee direction="left">
