--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/Services">Services</a></li>
-        		<li><a href="/Register">Register</a></li>
+        		<li><a href="/services">Services</a></li>
+        		<li><a href="/register">Register</a></li>
     		</ul>
 		</nav>
 		<div class="container">
