--- a/register/index.html
+++ b/register/index.html
@@ -6,9 +6,26 @@
 	<body>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Registation</h1>
-			<h1>1.Register As Customer</h1>
-		 <p></p>
+        		<h1>Registation for Services</h1>
+			<h2>1.Register As Customer</h2>
+		    
+			<h2>Register As Technician</h2>
+
+                    <form action="/action_page.php">
+                   <label for="fname">First name:</label><br>
+                      <input type="text" id="fname" name="fname" value=""><br>
+                    <label for="lname">Last name:</label><br>
+                       <input type="text" id="lname" name="lname" value=""><br><br>
+                    <label for="address">Address:</label><br>
+                        <input type="text" id="address" name="address" value=""><br>
+                    <label for="email">Email:</label><br>
+                        <input type="text" id="email" name="email" value=""><br>
+                     <label for="number">Mobile:</label><br>
+                           <input type="number" id="number" name="number" value=""><br>
+                           <input type="submit" value="Submit">
+                         </form> 
+
+<p>Please re-check the form before Submitting</p>
 	     </div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
