--- a/services/index.html
+++ b/services/index.html
@@ -7,32 +7,31 @@
 		
 		<div class="container">
     		<div class="blurb">
-        		<h1>Services</h1>
-				<p>1) Architecture Design
-2 )Construction
-3 )Tiles & Marbles       Installation
-4 )Steel & Aluminium Fabrication
-5)Hardware & Furniture
-6)Electric & Electronics Technician
-7)Cctv. Camera & Installation
-8) Solar Panel & Installation
-9)Computer & Electronics Repair
-10) Home Appliances Repair & Maintenance 
-11) Rental Car & Driver
-12) Driving Training Courses
-13) Transportation Service
-14) Photography & Videography
-15) Beautician
-16) Health & Fitness
-17) Carpenter
-18) Welder
-19) Plumber
-20) Painter
-21) Labour
-22) Tank Cleaner
-23) Interlocking Bricks</p>
+        		<h1>Services Available</h1>
+				<p>1) Architecture Design</p>
+<p>2 )Construction</p>
+<p>3 )Tiles & Marbles Installation</p>
+<p>4 )Steel & Aluminium Fabrication</p>
+<p>5)Hardware & Furniture</p>
+<p>6)Electric & Electronics Technician</p>
+<p>7)Cctv. Camera & Installation</p>
+<p>8) Solar Panel & Installation</p>
+<p>9)Computer & Electronics Repair</p>
+<p>10) Home Appliances Repair & Maintenance </p>
+<p>11) Rental Car & Driver</p>
+<p>12) Driving Training Courses</p>
+<p>13) Transportation Service</p>
+<p>14) Photography & Videography</p>
+<p>15) Beautician</p>
+<p>16) Health & Fitness</p>
+<p>17) Carpenter</p>
+<p>18) Welder</p>
+<p>19) Plumber</p>
+<p>20) Painter</p>
+
 				<p>What I think.... </p>
-			<marquee direction="New Services are comming soon....">
+			<marquee direction="left">
+				<p>New Services are comming soon....</p>
 			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
