--- a/services/index.html
+++ b/services/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>G&T Home Services</title>
 	</head>
-	<body style="background-color:hsla(0,100%,50%,0.5);">
+	<body style="background-color:DodgerBlue">
 		
 		<div class="container">
     		<div class="blurb">
@@ -29,10 +29,10 @@
 <p>19) Plumber</p>
 <p>20) Painter</p>
 
-				<p>What I think.... </p>
+				<p></p>
 			<marquee direction="left">
-				<p>New Services are comming soon....</p>
-			
+				<p>New Services Are Comming Soon....</p>
+			</marquee>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
