--- a/services/index.html
+++ b/services/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>G&T Home Services</title>
 	</head>
-	<body style="background-color:DodgerBlue">
+	<body style="background-color:rgb(238, 130, 238)">
 		
 		<div class="container">
     		<div class="blurb">
@@ -29,10 +29,7 @@
 <p>19) Plumber</p>
 <p>20) Painter</p>
 
-				<p></p>
-			<marquee direction="left">
-				<p>New Services Are Comming Soon....</p>
-			</marquee>
+			<marquee behavior="scroll" direction="left">New Services Are Coming Soon...</marquee>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
