--- a/services/index.html
+++ b/services/index.html
@@ -29,7 +29,7 @@
 <p>19) Plumber</p>
 <p>20) Painter</p>
 
-			<marquee behavior="scroll" direction="left">New Services Are Coming Soon...</marquee>
+			<h3><marquee behavior="scroll" direction="left">New Services Are Coming Soon...</marquee></h3>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
