--- a/about/index.html
+++ b/about/index.html
@@ -7,19 +7,17 @@
 		
 		<div class="container">
     		<div class="blurb">
-        		<h1>WHO WE ARE</h1>
-				<p>Computer Science Enthusiasts</p>
+        		<h1>About G&T Home Services</h1>
+				<p>G&T allows users to connect with skilled and experienced professionals for at-home service.</p>
+			<p>The
+users can start using the website/app by just signing in, but if a professional wants to be listed on
+the website/app, they have to undergo an intensive training module, to list their service on the
+platform.</p>
+			<p> Moreover, the platform will search for the nearest professional who matches the user’s
+requirements and is available at the given date and time.
+</p>
 				
-			<marquee direction="left">
-			<p>"Things change. And friends leave. Life doesn’t stop for anybody"</p>
-				</marquee>
-			<p><em>The day you were born you began a learning process that will continue for the rest of your life.
-				<p>You were, from the beginning, molded by your surroundings, parents, relatives, playmates,</p>
-				<p>by all the general attitudes, ideas, and beliefs you came in contact with.</p>
-				<p>Each new year of life added to your past, changing the way you viewed every new day,</p>
-				<p>influencing how you reacted to everything from the simplest daily routines to complex events touching you,
-					your family,</p>
-				<p>and the world you lived in</em>.</p>
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
