--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-	         <div class="gallery">
-        <a target="_blank" href="img_5terre.jpg">
-          <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
-  </a>
-  
-</div>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/services">Services</a></li>
-        		<li><a href="/register">Register</a></li>
+        		<li><a href="#">Home</a></li>
+	        	<li><a href="#about">About</a></li>
+        		<li><a href="#services">Services</a></li>
+        		<li><a href="#register">Register</a></li>
     		</ul>
 		</nav>
 		<div class="container">
