--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="#">Home</a></li>
-	        	<li><a href="#about">About</a></li>
-        		<li><a href="#services">Services</a></li>
-        		<li><a href="#register">Register</a></li>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/services">Services</a></li>
+        		<li><a href="/register">Register</a></li>
     		</ul>
 		</nav>
 		<div class="container">
