--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:gnthomeservices@gmail.com">email</a></li>
-        		<li><a href="https://github.com/gnthomeservices">github.com/gnthomeservices</a></li>
+        		<li><a href="/feedback">Feedback</a></li>
+			
 			</ul>
 		</footer>
 	</body>
