--- a/index.html
+++ b/index.html
@@ -19,34 +19,12 @@
         		<h1 style="text-align:center;","background-color:tomato;"> Welcome To G&T Home Services</h1>
 				<h2 style="text-align:center;", "background-color:powderblue;">Acomplete Home Services</h2>
     		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+		</div><!-- /.container -->		
 		
 <footer>
     		<ul>
-        		<li><a href="mailto:gnthomeservices@gmail.com">email</a></li>
-        		<li><a href="/feedback">Feedback</a></li>
+        		<li><a href="mailto:gnthomeservices@gmail.com"id="bottom">email</a></li>
+        		<li><a href="/feedback" id="bottom">Feedback</a></li>
 			
 			</ul>
 		</footer>
