--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <footer>
     		<ul>
         		<li><a href="mailto:gnthomeservices@gmail.com"id="bottom">email</a></li>
-        		<li><a href="/feedback" id="bottom">Feedback</a></li>
+        		<li><a href="https://forms.gle/T7sDXNwxzGztZcBL6" id="bottom">Feedback</a></li>
 			
 			</ul>
 		</footer>
