--- a/services/index.html
+++ b/services/index.html
@@ -8,27 +8,49 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Services Available</h1>
-				<p>1) Architecture Design</p>
-<p>2 )Construction</p>
-<p>3 )Tiles & Marbles Installation</p>
-<p>4 )Steel & Aluminium Fabrication</p>
-<p>5)Hardware & Furniture</p>
-<p>6)Electric & Electronics Technician</p>
-<p>7)Cctv. Camera & Installation</p>
-<p>8) Solar Panel & Installation</p>
-<p>9)Computer & Electronics Repair</p>
-<p>10) Home Appliances Repair & Maintenance </p>
-<p>11) Rental Car & Driver</p>
-<p>12) Driving Training Courses</p>
-<p>13) Transportation Service</p>
-<p>14) Photography & Videography</p>
-<p>15) Beautician</p>
-<p>16) Health & Fitness</p>
-<p>17) Carpenter</p>
-<p>18) Welder</p>
-<p>19) Plumber</p>
-<p>20) Painter</p>
+			<h3>Home Design and Construction</h3>
+			<p>• Architect model</p>
+			<p>• Interior Designer</p>
+			<p>• Painters: House/ office colouring </p>
+			<p>• CCTV Cameras installation</p>
+			<h3>Home Moving/Shifting</h3>
+			<p>• Packers & Movers </p>
+			<p>• Water Tank</p>
+			<h3>Home Cleaning and Repair </h3>
+			<p>• Electricals & Electronic Repair: Geyser Repair, Washing Machine, TV and Freeze Services</p>
+                        </p>• Plumber for Plumbing Services</p>
+                        <p>• Carpenter for Furniture</p>
+                        <p>• Kitchen Cleaning</p>
+                        <p>• Bathroom Cleaning</p>
+                        <p>• House Cleaning</p>
+                        <p>• Soft & Carpet Cleaning</p>
+		        <h3>Tutors & Lessons</h3>
+		         <p>• Home Tutor: You can hire a home tutor for mathematics, English, Commerce, Science,
+and more</p>
+<p>• Dance Masters</p>
+<p>• Music Teacher</p>
+<p>• Different Languages Tutors</p>
+		<h3>Party & Event Services</h3>
+		<p>• Birthday Party</p>
+<p>• Inauguration Arrangements</p>
+<p>• Festival Party</p>
+<p>• And More Event Organizations</p>
+<h3>Wedding Planner Services</h3>
+<p>• Wedding Planner</p>
+<p>• Bridal Makeup</p>
+<p>• Pre-wedding & Post-Wedding Photography</p>
+<h3>Health & Wellness</h3>
+<p>• Physiotherapy</p>
+<p>• Dietician</p>
+<p>• Yoga & Fitness Trainer at Home</p>
+<h3>Business</h3>
+<p>• Web Designer & Developer</p>
+<p>• App Developer</p>
+<p>• Lawyers</p>
+<p>• CA for Taxation to Small Business</p>
+  
 
+			
 			<h3><marquee behavior="scroll" direction="left">New Services Are Coming Soon...</marquee></h3>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
