--- a/services/index.html
+++ b/services/index.html
@@ -7,16 +7,16 @@
 		
 		<div class="container">
     		<div class="blurb">
-        		<h1>Services Available</h1>
-			<h3>Home Design and Construction</h3>
+        		<h1>List of Categories Covered by G&T Home Services</h1>
+			<h3>1. Home Design and Construction</h3>
 			<p>• Architect model</p>
 			<p>• Interior Designer</p>
 			<p>• Painters: House/ office colouring </p>
 			<p>• CCTV Cameras installation</p>
-			<h3>Home Moving/Shifting</h3>
+			<h3>2. Home Moving/Shifting</h3>
 			<p>• Packers & Movers </p>
 			<p>• Water Tank</p>
-			<h3>Home Cleaning and Repair </h3>
+			<h3>3. Home Cleaning and Repair </h3>
 			<p>• Electricals & Electronic Repair: Geyser Repair, Washing Machine, TV and Freeze Services</p>
                         </p>• Plumber for Plumbing Services</p>
                         <p>• Carpenter for Furniture</p>
@@ -24,26 +24,26 @@
                         <p>• Bathroom Cleaning</p>
                         <p>• House Cleaning</p>
                         <p>• Soft & Carpet Cleaning</p>
-		        <h3>Tutors & Lessons</h3>
+		        <h3>4. Tutors & Lessons</h3>
 		         <p>• Home Tutor: You can hire a home tutor for mathematics, English, Commerce, Science,
 and more</p>
 <p>• Dance Masters</p>
 <p>• Music Teacher</p>
 <p>• Different Languages Tutors</p>
-		<h3>Party & Event Services</h3>
+		<h3>5. Party & Event Services</h3>
 		<p>• Birthday Party</p>
 <p>• Inauguration Arrangements</p>
 <p>• Festival Party</p>
 <p>• And More Event Organizations</p>
-<h3>Wedding Planner Services</h3>
+<h3>6. Wedding Planner Services</h3>
 <p>• Wedding Planner</p>
 <p>• Bridal Makeup</p>
 <p>• Pre-wedding & Post-Wedding Photography</p>
-<h3>Health & Wellness</h3>
+<h3>7. Health & Wellness</h3>
 <p>• Physiotherapy</p>
 <p>• Dietician</p>
 <p>• Yoga & Fitness Trainer at Home</p>
-<h3>Business</h3>
+<h3>8. Business</h3>
 <p>• Web Designer & Developer</p>
 <p>• App Developer</p>
 <p>• Lawyers</p>
@@ -57,9 +57,8 @@ and more</p>
 		<footer>
     		<ul>
 			My Social Contects :
-			<li><a href="https://www.instagram.com/erro.r404r/">instagram_profile</a></li>
-        		<li><a href="https://www.linkedin.com/in/tanveer-ali-16a331180/">Linkedin_profile</a></li>
-			<li><a href="https://www.quora.com/profile/Tanveer-Ali-55">Quora_profile</a></li>
+        		<li><a href="https://www.linkedin.com/in/tanveer-ali-16a331180/">Tanveer_profile</a></li>
+			<li><a href="https://www.linkedin.com/in/gulzarh/">Gulzar_profile</a></li>
         		<li><a href="https://github.com/tanveer263">github.com/tanveer263</a></li>
 			</ul>
 		</footer>
